--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         font-family: Changa;
       }
     </style>
-    <title>React App</title>
+    <title>App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
